--- a/site/stylesheets/extra.css
+++ b/site/stylesheets/extra.css
@@ -1,3 +1,24 @@
 .md-grid {
     max-width: 1440px; 
 }
+
+:root {
+    --md-primary-fg-color:        #96110e;
+    --md-primary-fg-color--light: #ECB7B7;
+    --md-primary-fg-color--dark:  #96110e;
+}
+
+[data-md-color-scheme="slate"] {
+    --md-hue: 110; 
+}
+
+::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #8f1d3a;
+    border: 2px solid transparent;
+    background-clip: padding-box;    
+}
