--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-    --md-primary-fg-color:        #a42600;
+    --md-primary-fg-color:        #EF5A57;
     --md-primary-fg-color--light: #ECB7B7;
     --md-primary-fg-color--dark:  #96110e;
     --darkreader-bg--md-primary-fg-color: #a42600;
