--- a/overrides/partials/content.html
+++ b/overrides/partials/content.html
@@ -74,7 +74,7 @@
         options: {
           owner: 'shafishcn',
           repo: 'shafish_blog',
-          clientId: 'f1ccfedcce534122af88',//'f49fcb8c02a7868c8690',
+          clientId: 'f1ccfedcce534122af88',//'f49fcb8c02a7868c8690',//
           clientSecret: '1c301b1dd2616bfa68853a8c27684fd069b97dcd',//'5940fc487ff4e7237a01a28c0fe3775140bf05b2', // only required for some of the platforms
           prefix: '[BlogComment]',
           labels: [':sunny:'],
