--- a/overrides/partials/content.html
+++ b/overrides/partials/content.html
@@ -72,10 +72,10 @@
         title: options => `${options.prefix}${document.title}`,
         
         options: {
-          owner: 'shafishcn',
+          owner: 'tffats',
           repo: 'shafish_blog',
-          clientId: 'f49fcb8c02a7868c8690',//'f1ccfedcce534122af88',//
-          clientSecret: '5940fc487ff4e7237a01a28c0fe3775140bf05b2', // '1c301b1dd2616bfa68853a8c27684fd069b97dcd',//only required for some of the platforms
+          clientId: '84b1faa2fb960a12022a',
+          clientSecret: 'c1dea07821b8a9378c4567a9581e45920ae6483c', //only required for some of the platforms
           prefix: '[BlogComment]',
           labels: [':sunny:'],
           issueContent: ({ url }) =>`这个 Issue 由 Vssue 自动创建，用来存储该页面的评论：${url}`
