添加图片放大、视频播放及进度计划

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -25,15 +25,6 @@
 }
 
 /* 图片放大start */
-/* img {
-    height: auto;
-    width: auto;
-    border: 1px solid #ddd;
-    border-radius: 6px;
-    padding: 4px;
-    background-color: #fff;
-}
-
 .shadow {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -44,10 +35,10 @@
 }
 
 .image-zoom-large {
-    transform: scale(1.5);
+    transform: scale(1.9);
     cursor: zoom-out;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     z-index: 100;
-    position: absolute;
-} */
+    position: relative;
+}
 /* 图片放大end*/
