--- a/overrides/partials/content.html
+++ b/overrides/partials/content.html
@@ -73,12 +73,13 @@
         
         options: {
           owner: 'tffats',
+          admins: ['shafishcn'],
           repo: 'shafish_blog',
           clientId: '84b1faa2fb960a12022a',
           clientSecret: 'c1dea07821b8a9378c4567a9581e45920ae6483c', //only required for some of the platforms
           prefix: '[BlogComment]',
           labels: [':sunny:'],
-          //autoCreateIssue: true,
+          autoCreateIssue: true,
           issueContent: ({ url }) =>`这个 Issue 由 Vssue 自动创建，用来存储该页面的评论：${url}`
         },
       },
