--- a/overrides/partials/content.html
+++ b/overrides/partials/content.html
@@ -60,9 +60,11 @@
 
     <!--<link rel="stylesheet" href="https://unpkg.com/vssue/dist/vssue.min.css">
  OR: vue full build (runtime + compiler)  -->
-<script src="https://unpkg.com/vue/dist/vue.min.js"></script>
+<!-- <script src="https://unpkg.com/vue/dist/vue.min.js"></script> -->
+<script src="https://file.cdn.shafish.cn/blog/js/vue.js"></script>
 <!-- Vssue Github build -->
-<script src="https://unpkg.com/vssue/dist/vssue.github.min.js"></script>
+<!-- <script src="https://unpkg.com/vssue/dist/vssue.github.min.js"></script> -->
+<script src="https://file.cdn.shafish.cn/blog/js/vssue.github.min.js"></script>
 
 <script>
     new Vue({
