--- a/overrides/partials/comment.html
+++ b/overrides/partials/comment.html
@@ -1,30 +1,6 @@
-{% extends "base.html" %}
-
-{% block content %}
-  {{ super() }}
-
-  <!-- Giscus https://file.cdn.shafish.cn/blog/js/client.js  https://file.cdn.shafish.cn/blog/css/custom_example.css-->
-  <!-- Replace with generated snippet https://giscus.app/client.js https://giscus.app/themes/custom_example.css -->
-  <script src="https://giscus.app/client.js"
-  data-repo="tffats/shafish_blog"
-  data-repo-id="R_kgDOGirg3w"
-  data-category="Announcements"
-  data-category-id="DIC_kwDOGirg384CPf8O"
-  data-mapping="title"
-  data-reactions-enabled="1"
-  data-emit-metadata="1"
-  data-input-position="top"
-  data-theme="https://giscus.app/themes/custom_example.css"
-  data-lang="zh-CN"
-  data-loading="lazy"
-  crossorigin="anonymous"
-  async>
-</script>
-{% endblock %}
-
-<!-- {% if page.meta.comments %}
+{% if page.meta.comments %}
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
-  Insert generated snippet here
+  <!-- Insert generated snippet here -->
   <script src="https://giscus.app/client.js"
     data-repo="tffats/shafish_blog"
     data-repo-id="R_kgDOGirg3w"
@@ -40,7 +16,7 @@
     crossorigin="anonymous"
     async>
   </script>
-  Synchronize Giscus theme with palette 
+  <!-- Synchronize Giscus theme with palette  -->
   <script>
     var giscus = document.querySelector("script[src*=giscus]")
 
@@ -77,4 +53,4 @@
       })
     })
   </script>
-{% endif %} -->
+{% endif %}
